# llvm-dsdl

./: .clang-format  .gitignore  .gitmodules  CANONICAL_PLAN.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEMO.md  DEMO_LIBUDPARD_PING_PONG_PLAN.md  DESIGN.md  GO_INTEGRATION_PLAN_2026-02-17.md  LICENSE.md  LOWERED_SERDES_CONTRACT.md  LOWERING_SHARE_PLAN.md  MLIR_MAX_LOWERING_PLAN.md  PYTHON_COMPLETE.md  README.md  RELEASE_CHECKLIST.md  THIRD_PARTY_NOTICES.md  WASM.md  WORKDAY_PLAN_2026-02-16.md  WORKDAY_PLAN_2026-02-17.md  de_pragmatization.md  dsdld.md
examples/cyphal_ping_pong/: CMakeLists.txt  run_ping_pong_demo.sh
examples/cyphal_ping_pong/dsdl/demo/ping/: PingPong.1.0.dsdl
examples/cyphal_ping_pong/src/: ping_pong_node.cpp
examples/cyphal_ping_pong/src/net/: udp_posix.c  udp_posix.h
examples/cyphal_yakut_register_demo/: CMakeLists.txt  DEMO.md  README.md  run_yakut_register_demo.sh
examples/cyphal_yakut_register_demo/src/: native_register_node.cpp
examples/cyphal_yakut_register_demo/src/go_register_node/: go.mod.in  main.go  transport_shim.c  transport_shim.h
examples/cyphal_yakut_register_demo/src/rust_register_node/: Cargo.toml.in  build.rs  main.rs
lib/: CMakeLists.txt
lib/CodeGen/: ArrayWirePlan.cpp  CEmitter.cpp  CHeaderRender.cpp  CMakeLists.txt  CodegenDiagnosticText.cpp  CompositeImportGraph.cpp  ConstantLiteralRender.cpp  CppEmitter.cpp  CppObjectAbiEmitter.cpp  DefinitionDependencies.cpp  DefinitionIndex.cpp  DefinitionPathProjection.cpp  EmitCommon.cpp  GoEmitter.cpp  HelperBindingNaming.cpp  HelperBindingRender.cpp  HelperSymbolResolver.cpp  LoweredBodyPlan.cpp  LoweredFactsLookup.cpp  LoweredRenderIR.cpp  MlirLoweredFacts.cpp  NamingPolicy.cpp  NativeEmitterTraversal.cpp  NativeFunctionSkeleton.cpp  NativeHelperContract.cpp  ObjectEmitter.cpp  PythonEmitter.cpp  RuntimeHelperBindings.cpp  RuntimeLoweredPlan.cpp  RustEmitter.cpp  ScriptedBodyPlan.cpp  ScriptedOperationPlan.cpp  SectionHelperBindingPlan.cpp  SerDesHelperDescriptors.cpp  SerDesStatementPlan.cpp  StorageTypeTokens.cpp  TsEmitter.cpp  TsLoweredPlan.cpp  TypeStorage.cpp  UavcanEmbeddedCatalog.cpp  (+2 more)
lib/Frontend/: ASTPrinter.cpp  CMakeLists.txt  DepfilePlanner.cpp  Discovery.cpp  Lexer.cpp  Parser.cpp  TargetResolution.cpp
lib/IR/: CMakeLists.txt  DSDLAttrs.cpp  DSDLDialect.cpp  DSDLOps.cpp  DSDLTypes.cpp
lib/LSP/: AI.cpp  Analysis.cpp  CMakeLists.txt  DocumentStore.cpp  Index.cpp  JsonRpcIO.cpp  Lint.cpp  Ranking.cpp  RequestScheduler.cpp  Server.cpp  ServerConfig.cpp  Telemetry.cpp
lib/Lowering/: CMakeLists.txt  LowerToMLIR.cpp
lib/Semantics/: Analyzer.cpp  BitLengthSet.cpp  CMakeLists.txt  Evaluator.cpp
lib/Support/: CMakeLists.txt  Diagnostics.cpp  Rational.cpp  SourceLocation.cpp
lib/Transforms/: CMakeLists.txt  ConvertDSDLToEmitC.cpp  LoweredSerDesContractValidation.cpp  Passes.cpp
test/benchmark/: CMakeLists.txt  README.md  benchmark_codegen.py  benchmark_lsp.py  complex_codegen_thresholds.json
test/benchmark/complex/: README.md  generate_complex_dsdl.sh  uavcan
test/benchmark/complex/civildrone/airframe/: AirframeBatch.1.0.dsdl  AirframeControl.1.0.dsdl  AirframeEvent.1.0.dsdl  AirframeHistory.1.0.dsdl  AirframeProfile.1.0.dsdl  AirframeReport.1.0.dsdl  AirframeState.1.0.dsdl
test/benchmark/complex/civildrone/autonomy/: AutonomyBatch.1.0.dsdl  AutonomyControl.1.0.dsdl  AutonomyEvent.1.0.dsdl  AutonomyHistory.1.0.dsdl  AutonomyProfile.1.0.dsdl  AutonomyReport.1.0.dsdl  AutonomyState.1.0.dsdl
test/benchmark/complex/civildrone/avoidance/: AvoidanceBatch.1.0.dsdl  (+6 more)
test/benchmark/rust_runtime/benchrust/: Payload.1.0.dsdl
test/integration/: CGoParityCHarness.c  CGoParityGo.mod.in  CGoParityMain.go  CMakeLists.txt  CRustParityCHarness.c  CRustParityCargo.toml.in  CRustParityMain.rs  CppCParityMain.cpp  DifferentialParityABI.h  DifferentialParityMain.c.in  DifferentialParityNunavut.c.in  DifferentialParityOurs.c.in  RunCGoParity.cmake  RunCPythonFixtureParity.cmake  RunCRustParity.cmake  RunCTsParity.cmake  RunCppCParity.cmake  RunDifferentialParity.cmake  RunDsdlOptSanity.cmake  RunFixturesCTsBigIntParity.cmake  RunFixturesCTsCompatParity.cmake  RunFixturesCTsCompositeFixedArrayParity.cmake  RunFixturesCTsCompositeParity.cmake  RunFixturesCTsCompositeVariableArrayParity.cmake  RunFixturesCTsDelimitedInvalidHeaderParity.cmake  RunFixturesCTsDelimitedParity.cmake  RunFixturesCTsFloatParity.cmake  RunFixturesCTsPaddingAlignmentParity.cmake  RunFixturesCTsRuntimeParity.cmake  RunFixturesCTsServiceParity.cmake  RunFixturesCTsTruncatedDecodeParity.cmake  RunFixturesCTsUnionArrayParity.cmake  RunFixturesCTsUnionCompositeParity.cmake  RunFixturesCTsUnionEmptyCompositeParity.cmake  RunFixturesCTsUnionParity.cmake  RunFixturesCTsUtf8Parity.cmake  RunFixturesCTsVariableArrayParity.cmake  RunFixturesPythonGenerationHardening.cmake  RunFixturesTsGenerationHardening.cmake  RunGoRuntimeUnitTests.cmake  (+71 more)
test/unit/: AnalyzerTests.cpp  ArrayWirePlanTests.cpp  BitLengthSetTests.cpp  CHeaderRenderTests.cpp  CMakeLists.txt  CodegenDiagnosticTextTests.cpp  CompositeImportGraphTests.cpp  ConstantLiteralRenderTests.cpp  DefinitionDependenciesTests.cpp  DefinitionIndexTests.cpp  DefinitionPathProjectionTests.cpp  DepfilePlannerTests.cpp  DepfileRenderTests.cpp  EvaluatorTests.cpp  HelperBindingNamingTests.cpp  HelperBindingRenderTests.cpp  HelperSymbolResolverTests.cpp  LoweredBodyPlanTests.cpp  LoweredContractVersionTests.cpp  LoweredFactsLookupTests.cpp  LoweredMetadataHardeningTests.cpp  LoweredRenderIRTests.cpp  LspAnalysisTests.cpp  LspDocumentStoreTests.cpp  LspIndexTests.cpp  LspJsonRpcFuzzTests.cpp  LspLintTests.cpp  LspRankingTests.cpp  LspRequestSchedulerTests.cpp  LspRobustnessTests.cpp  LspServerTests.cpp  NamingPolicyTests.cpp  NativeEmitterTraversalTests.cpp  NativeHelperContractTests.cpp  ParserTests.cpp  RunPythonUnitTests.cmake  RuntimeHelperBindingsTests.cpp  RuntimeLoweredOrderingTests.cpp  RuntimeLoweredPlanTests.cpp  RuntimeTests.cpp  (+10 more)
tools/dsdlc/: CMakeLists.txt  generate_embedded_uavcan_mlir.py  main.cpp  test_generate_embedded_uavcan_mlir.py
(+1913 files in other folders)
